# qemu-virt-hello

./: .gitignore  CMakeLists.txt  README.md  build.sh  tool.sh  virt.dts
kernel/: gic.c  machine.h  main.c  start.S  tools.S  tools.h  uart.c  uart.h
